<resources>
    <string name="app_name">Calculo de areas y volumenes</string>
    <string name="areas">Areas</string>
    <string name="volumenes">Volumenes</string>
    <string name="operaciones_realizadas">Operaciones Realizadas</string>
    <array name="opciones">
        <item>@string/areas</item>
        <item>@string/volumenes</item>
        <item>@string/operaciones_realizadas</item>
    </array>
    <string name="cuadrado">Cuadrado</string>
    <string name="rectangulo">Rectangulo</string>
    <string name="triangulo">Triangulo</string>
    <string name="circulo">Circulo</string>
    <array name="area">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </array>
    <string name="esfera">Esfera</string>
    <string name="cilindro">Cilindro</string>
    <string name="cono">Cono</string>
    <string name="cubo">Cubo</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="v_lado">valor del lado</string>
    <array name="volumen">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
    </array>
    <string name="area_del_cuadrado">Area del cuadrado</string>
    <string name="msn_resultado">Resultado</string>
    <string name="area">Area</string>
    <string name="msn_error">por favor llene el campo</string>
    <string name="base">Base</string>
    <string name="altura">Altura</string>
    <string name="area_del_triangulo">Area del triangulo</string>
    <string name="area_del_rectangulo">Area del rectangulo</string>
    <string name="valor_del_radio">Valor del radio</string>
    <string name="area_del_radio">Area del circulo</string>
    <string name="radio">Radio</string>
    <string name="volumen_de_la_esfera">volumen de la esfera</string>
    <string name="volumen">Volumen</string>
    <string name="volumen_del_cilindro">volumen del cilindro</string>
    <string name="v_cono">volumen del cono</string>
    <string name="arista">Valor de la arista</string>
    <string name="v_cubo">Volumen del cubo</string>
    <string name="no">No.</string>
    <string name="operacion">Operacion</string>
    <string name="datos">Datos</string>
    <string name="resultado">Resultado</string>


</resources>
